Static compile and update version

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,6 +1,8 @@
 FROM andrewd/musl-cross
 MAINTAINER Andrew Dunham <andrew@du.nham.ca>
 
+RUN apt-get update && apt-get install -y zip
+
 # Add our build script
 ADD . /build/
 
