--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,5 +1,7 @@
 FROM lisa/musl-cross:1.1.19
-MAINTAINER Andrew Dunham <andrew@du.nham.ca>
+MAINTAINER Lisa Seelye <lisa@thedoh.com>
+# Upstream maintainer:
+#MAINTAINER Andrew Dunham <andrew@du.nham.ca>
 
 RUN apt-get update && apt-get install -y zip
 
@@ -7,4 +9,16 @@ RUN apt-get update && apt-get install -y zip
 ADD . /build/
 
 # This builds the program and copies it to /output
-CMD /build/build.sh
+RUN /build/build.sh
+
+###
+FROM scratch
+MAINTAINER Lisa Seelye <lisa@thedoh.com>
+WORKDIR /
+COPY --from=0 /output/python* /
+ENV \
+  PYTHONHOME=/python2.7.zip \
+  PYTHONPATH=/python2.7.zip
+
+ENTRYPOINT [ "/python", "-s", "-S" ]
+
