Should be CMD and not ENTRYPOINT

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -20,5 +20,7 @@ ENV \
   PYTHONHOME=/python2.7.zip \
   PYTHONPATH=/python2.7.zip
 
-ENTRYPOINT [ "/python", "-s", "-S" ]
+# In an ideal world this would call /entrypoint.py which will be implemented by the user.
+# so consider that a FIXME.
+CMD [ "/python", "-s", "-S" ]
 
