Statically compile psutil into python
Add usage notes to the README.md and build notes as well. There will be a separate repository (at a later time) with the examples baked in.

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -16,6 +16,11 @@ FROM scratch
 MAINTAINER Lisa Seelye <lisa@thedoh.com>
 WORKDIR /
 COPY --from=0 /output/python* /
+
+# just in case things need them to exist, like flask
+COPY passwd /etc/passwd
+COPY group /etc/group
+
 ENV \
   PYTHONHOME=/python2.7.zip \
   PYTHONPATH=/python2.7.zip
